# BulletForceHaxV3

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: deploy-docs.yml
bfh3-browser-implant/: Cargo.toml
bfh3-browser-implant-macros/: Cargo.toml
bfh3-browser-implant-macros/src/: lib.rs
bfh3-browser-implant/src/: lib.rs  networking.rs  utils.rs
bfh3-browser-implant/src/bindgen/: exports.rs  imports.rs  mod.rs
bfh3-browser-implant/src/features/: devtools.rs  lobby.rs  mod.rs  sidepanel_data.rs
bfh3-browser-implant/src/game_data/: mod.rs
bfh3-extension/: .editorconfig  .prettierrc  README.md  eslint.config.js  package-lock.json  package.json  tsconfig.json  webpack.config.js
bfh3-extension/public/: devtools_main.html  devtools_panel.css  devtools_panel.html  init_wasm_module.js  manifest.json  popup.html  sidepanel.html
bfh3-extension/src/: background.js  background.ts  popup.css  popup.ts
bfh3-extension/src/communication/: index.ts  to_background.ts  to_devtools.ts  to_sidepanel.ts
bfh3-extension/src/contentScripts/: gameFrameDocumentStart.ts
bfh3-extension/src/devtools/: page.ts  panel.tsx
bfh3-extension/src/devtools/components/: DevtoolsTab.tsx  MessageList.tsx  MessageListWithSidePanel.tsx  SidePanel.tsx  TopPanel.tsx  messageTest.tsx
bfh3-extension/src/sidepanel/: index.tsx
bfh3-extension/src/sidepanel/components/: GameDataContextProvider.tsx  GameInfo.tsx  LobbyInfo.tsx  LobbyOrGameInfo.tsx
bfh3-extension/src/util/: fileCache.ts  index.ts
bfh3-extension/src/webAccessibleResources/: gameFrameLoadGameHook.ts
bfh3-extension/src/webAccessibleResources/gameFrameRuntime/: index.ts  loadGameHook.ts  messaging.ts
bulletforce_api/: Cargo.toml  build.rs
bulletforce_api/src/: lib.rs  utils.rs
bulletforce_client/: Cargo.toml
bulletforce_client/src/: clients.rs  errors.rs  lib.rs  utils.rs
bulletforce_client/src/clients/: game.rs  lobby.rs  mod.rs
cli-bot/: Cargo.toml
cli-bot/src/: cli_args.rs  connect_util.rs  main.rs  utils.rs  websocket_client.rs
cli-bot/src/tools/: check_accounts.rs  mod.rs
docs/: .gitignore  .vale.ini  book.toml  openapi.yml
docs/src/: SUMMARY.md  index.md
docs/src/BulletForceInternal/: TechStack.md
docs/src/BulletForceInternal/PUN/: ListOfRpcCalls.md
docs/src/BulletForceInternal/ReverseEngineering/: GettingGameFiles.md
docs/src/HttpApi/: Index.md  OpenAPI.md
photon_bulletforce/: Cargo.toml
photon_bulletforce/src/: rpc.rs
photon_lib/: Cargo.toml
photon_lib/src/: hashmap_serde.rs  lib.rs  photon_data_type.rs  photon_message.rs  photon_object_type.rs  primitives.rs
photon_lib/src/highlevel/: macro_impl.rs  mod.rs  structs.rs  structs_impl.rs
photon_lib/src/highlevel/constants/: actor_properties.rs  event_code.rs  game_property_key.rs  operation_code.rs  parameter_code.rs  pun_event_code.rs
photon_lib/src/photon/: message.rs  mod.rs  object.rs
photon_lib/src/pun/: macro_impl.rs  mod.rs  newtypes.rs  structs.rs  structs_impl.rs
photon_lib/src/pun/constants/: actor_properties.rs  event_code.rs  game_property_key.rs  internal_operation_code.rs  mod.rs  parameter_code.rs  pun_event_code.rs
photon_lib/src/pun/lifting/: events.rs  internal_operation_request.rs  internal_operation_response.rs  mod.rs  operation_request.rs  operation_response.rs
photon_lib/src/utils/: derive_utils.rs  mod.rs  photon_data_type_extensions.rs
(+1 files in other folders)
