[package]
name = "bfh3-browser-implant"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
console_error_panic_hook = { version = "0.1.7", optional = true }
photon_lib = { path = "../photon_lib" }
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.77", features = ["console"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"
