[package]
name = "bfh3-browser-implant"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.95"
bfh3-browser-implant-macros = { path = "../bfh3-browser-implant-macros" }
console_error_panic_hook = "0.1.7"
photon_bulletforce = { path = "../photon_bulletforce" }
photon_lib = { path = "../photon_lib" }
serde_json = "1.0.139"
tracing = { version = "0.1.41", features = ["release_max_level_info"] }
tracing-subscriber = "0.3.19"
tracing-web = "0.1.3"
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.50"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

# Enable dwarf debug info on dev profile
[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
dwarf-debug-info = true
