[package]
name = "cli-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
argh = "0.1.13"
bulletforce_api = { path = "../bulletforce_api" }
bulletforce_client = { path = "../bulletforce_client" }
data-encoding = "2.9.0"
fastrand = "2.3.0"
futures-util = "0.3.31"
serde = { version = "1.0.219", features = ["derive"] }
sha2 = "0.10.8"
tokio = { version = "1.44.2", features = ["rt-multi-thread", "macros"] }
tokio-tungstenite = { version = "0.26.2", features = ["native-tls"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
