[package]
name = "photon_lib"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.10.0"
derivative = "2.2.0"
indexmap = { version = "2.7.1", features = ["serde"] }
ordered-float = { version = "4.6.0", features = ["serde"] }
paste = "1.0.15"
serde = { version = "1.0.217", features = ["derive"] }
thiserror = "2.0.11"
tracing = "0.1.41"

[dev-dependencies]
hex = "0.4"
